# esl-games

./: BUILD  README.md  WORKSPACE  deps.bzl  go.mod  go.sum
api/v1alpha1/: BUILD.bazel  groupversion_info.go  zz_generated.deepcopy.go
cmd/asset-server/: BUILD.bazel  main.go
cmd/creator-api/: BUILD.bazel  main.go
cmd/dummy/: BUILD.bazel
cmd/game-server/: BUILD.bazel  main.go
cmd/lesson-controller/: BUILD.bazel
cmd/lesson-operator/: BUILD.bazel  main.go
cmd/operator/: BUILD.bazel  main.go
controllers/: BUILD.bazel  lesson_controller.go  suite_test.go
k8s/: BUILD
k8s/manifests/: lesson-crd.yaml  matcher.yaml  namespace.yaml  postgres-secret.yaml.tpl  postgres.yaml
k8s/manifests/lesson-operator/: kustomization.yaml  lesson_controller_manager_config.yaml  manager.yaml
k8s/overlays/lesson-operator/: manager.yaml.tpl
k8s/scripts/: BUILD.bazel  generate-secrets.go
pkg/account/: BUILD.bazel  group.go  user.go  userobject.go
pkg/assetserver/: BUILD.bazel  assetserver.go  serve.go
pkg/k8s/api/v1alpha1/: BUILD.bazel  groupversion_info.go  lesson_types.go
pkg/lesson/: BUILD.bazel  act.go  answers.go  comparison.go  context.go  controller.go  event-loop.go  lesson.go  message.go  model.go  op.go  plan.go  player.go  question-filter.go  question-set.go  question.go  register.go  resolvable.go  response.go  round.go  scene.go  scores.go  team.go
pkg/lesson2/: act.go  checkpoint.go  controller-event.go  controller.go  event-loop-event.go  event-loop.go  lesson-server.go  model.go  plan.go  player.go  question-set.go  question.go  record.go  renderer.go  response.go  round.go  scene.go  score.go  tags.go  team.go  websocket-message.go
pkg/lessoncontroller/: BUILD.bazel  lesson_controller.go  suite_test.go
pkg/model/: BUILD.bazel  model.go
scripts/: go-get.sh  microk8s-dashboard-token.sh
src/: BUILD.bazel
webapp/: BUILD
