load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "controllers",
    srcs = ["lesson_controller.go"],
    importpath = "github.com/alsenz/esl-games/controllers",
    visibility = ["//visibility:public"],
    deps = [
        "//api/v1alpha1",
        "@com_github_go_logr_logr//:logr",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
        "@io_k8s_sigs_controller_runtime//pkg/client",
    ],
)

go_test(
    name = "controllers_test",
    srcs = ["suite_test.go"],
    embed = [":controllers"],
    deps = [
        "//api/v1alpha1",
        "@com_github_onsi_ginkgo//:ginkgo",
        "@com_github_onsi_gomega//:gomega",
        "@io_k8s_client_go//kubernetes/scheme",
        "@io_k8s_client_go//rest",
        "@io_k8s_sigs_controller_runtime//pkg/client",
        "@io_k8s_sigs_controller_runtime//pkg/envtest",
        "@io_k8s_sigs_controller_runtime//pkg/envtest/printer",
        "@io_k8s_sigs_controller_runtime//pkg/log",
        "@io_k8s_sigs_controller_runtime//pkg/log/zap",
    ],
)
