load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "asset-server",
    embed = [":asset-server_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "asset-server_lib",
    srcs = ["main.go"],
    importpath = "github.com/alsenz/esl-games/cmd/asset-server",
    visibility = ["//visibility:private"],
    deps = ["//pkg/assetserver"],
)
