load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "creator-api",
    embed = [":creator-api_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "creator-api_lib",
    srcs = ["main.go"],
    importpath = "github.com/alsenz/esl-games/cmd/creator-api",
    visibility = ["//visibility:private"],
    deps = ["//pkg/assetserver"],
)
