load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "game-server",
    embed = [":game-server_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "game-server_lib",
    srcs = ["main.go"],
    importpath = "github.com/alsenz/esl-games/cmd/game-server",
    visibility = ["//visibility:private"],
    deps = ["@com_github_gorilla_websocket//:websocket"],
)
