load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "generate-secrets",
    srcs = ["generate-secrets.go"],
    importpath = "github.com/alsenz/esl-games/k8s/scripts",
    visibility = ["//visibility:public"],
    deps = ["@com_github_thanhpk_randstr//:randstr"],
)
