load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "assetserver",
    srcs = ["assetserver.go"],
    importpath = "github.com/alsenz/esl-games/pkg/assetserver",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/account",
        "@io_gorm_driver_postgres//:postgres",
        "@io_gorm_gorm//:gorm",
    ],
)
