load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "lessoncontroller",
    srcs = ["lesson_controller.go"],
    importpath = "github.com/alsenz/esl-games/pkg/lessoncontroller",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/k8s/api/v1alpha1",
        "@com_github_go_logr_logr//:logr",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_apimachinery//pkg/api/errors",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/types",
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
        "@io_k8s_sigs_controller_runtime//pkg/client",
        "@io_k8s_sigs_controller_runtime//pkg/controller/controllerutil",
        "@io_k8s_sigs_controller_runtime//pkg/reconcile",
    ],
)

go_test(
    name = "lessoncontroller_test",
    srcs = ["suite_test.go"],
    embed = [":lessoncontroller"],
    deps = [
        "//pkg/k8s/api/v1alpha1",
        "@com_github_onsi_ginkgo//:ginkgo",
        "@com_github_onsi_gomega//:gomega",
        "@io_k8s_client_go//kubernetes/scheme",
        "@io_k8s_client_go//rest",
        "@io_k8s_sigs_controller_runtime//pkg/client",
        "@io_k8s_sigs_controller_runtime//pkg/envtest",
        "@io_k8s_sigs_controller_runtime//pkg/envtest/printer",
        "@io_k8s_sigs_controller_runtime//pkg/log",
        "@io_k8s_sigs_controller_runtime//pkg/log/zap",
    ],
)
